fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-invoiceninja-app-to-invoiceninja-mysql.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-invoiceninja-app-to-invoiceninja-mysql
spec:
  selector:
    matchLabels:
      app: invoiceninja-mysql
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/hyrule-castle/sa/invoiceninja-app
      to:
        - operation:
            ports: ["3306"]
